<!--
  ~ Copyright (c) Alexey Barykin 2020.
  ~ All rights reserved.
  -->

<resources>

    <!-- Login Activity strings -->
    <string name="app_name">PatientSupport</string>
    <string name="menu_item_profile">Профиль</string>
    <string name="menu_item_recommendations">Рекомендации</string>
    <string name="menu_item_medicine">Лекарства</string>
    <string name="menu_item_glossary">Словарь</string>
    <string name="support">Support</string>
    <string name="for_patient">for patients</string>

    <!-- Authorization -->
    <string name="phone_number_text_input_hint">Номер телефона</string>
    <string name="password_text_input_laout_hint">Пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="signup_button_text">Регистрация</string>

    <!-- Data agreement -->
    <string name="accept_text">Принять</string>
    <string name="reject_button_text">Отклонить</string>
    <string name="data_agreement">Нажимая кнопку "Принять", вы, в соответствии с п.4 ст.9 Федерального закона от 27.07.2006 N 152-ФЗ "О
персональных данных", даёте согласие на обработку ваших персональных данных, то есть на совершение действий, предусмотренных п.3 ст.3
Федерального закона от 27.07.2006 N 152-ФЗ "О персональных данных"</string>
    <string name="agreement_text_view_text">Согласие на обработку данных</string>

    <!-- Sign up fragment -->
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="male_short">муж.</string>
    <string name="female">жен.</string>
    <string name="date_is_null">Дата рождения не выбрана</string>
    <string name="man_height">Рост</string>
    <string name="weight">Вес</string>

    <!-- input data errors -->
    <string name="empty_phone_number_error">Номер телефона должен быть указан обязательно</string>
    <string name="empty_name_error">Имя должно быть указано обязательно</string>
    <string name="empty_surname_error">Фамилия должна быть указана обязательно</string>
    <string name="empty_patronymic_error">Отчество должно быть указано обязательно</string>
    <string name="empty_password_error">Пароль должен быть указан обязательно</string>
    <string name="empty_repeat_password_error">Пароль должен быть указан повторно</string>
    <string name="empty_height_error">Рост должен быть указан обязательно</string>
    <string name="empty_weight_error">Вес должен быть указан обязательно</string>
    <string name="length_phone_number_not_equal_eleven_error">Номер телефона должен состоять из 10 цифр</string>
    <string name="password_and_repeat_password_are_not_equal_error">Введённые пароли не совпадают</string>

    <!--Network -->
    <string name="please_wait">Пожалуйста подождите</string>
    <string name="network_error">"Ошибка сети"</string>
    <string name="incorrect_auth">"Неверный логин или пароль!"</string>
    <string name="previous_recommendation">предыдущая рекомендация</string>
    <string name="next_recommendation">следующая рекомендация</string>
    <string name="calendar">календарь</string>
    <string name="update">Обновить</string>
    <string name="recommendationIsDone">Рекомендация выполнена!</string>
    <string name="passwordIsChanged">Пароль успешно изменен!</string>
    <!-- MainActivity strings -->
    <string name="choose_date">Выбрать дату</string>
    <string name="recommendations">Рекомендации</string>
    <string name="glossary">Словарь</string>
    <string name="medicines">Лекарства</string>
    <string name="profile">Профиль</string>
    <string name="exit">Выход</string>
    <string name="about_app">О приложении</string>
    <string name="important">Важно</string>
    <string name="Endopro">Эндопро</string>
    <string name="confirm_recommendation_text">Нажмите галочку, чтобы доктор увидел, что вы выполнили рекомендацию на сегодня.</string>
    <string name="profile_phone_number">Номер телефона:</string>
    <string name="profile_your_doctor">Ваш доктор:</string>
    <string name="Patient">Пациент</string>
    <string name="exit_from_profile">Выйти из профиля</string>

    <!-- DrugsFragment -->
    <string name="medicament">Препарат</string>
    <string name="test_drug_dosage">1000 мг</string>
    <string name="time_of_take_drug">В</string>
    <string name="test_drug_time">13:00</string>
    <string name="accept_drug">Лекарство принято</string>
    <string name="today_icon">today icon</string>
    <string name="test_drug_date">25 июля</string>
    <string name="need_accept">Нужно принять</string>
    <string name="all_drugs">Все приёмы</string>
    <string name="medicament_fragment_title">Лекарства</string>
    <string name="medicament_date_picker_fragment_title">Выберите дату</string>
    <string name="no_medicine">Лекарства отсутствуют</string>
    <string name="there_is_no_recommendations">Рекомендаций\nна эту дату нет</string>
    <string name="today">Сегодня</string>
    <string name="accept_drug_button">принять лекарство</string>
    <string name="know_more">Узнать больше</string>
    <string name="time_to_apply_drugs">Время принять лекарство!</string>

    <string name="drug_is_accepted">Принято</string>

    <string name="today_recommendations">Рекомендации</string>
    <string name="open_today_recommendations">"Посмотрите Ваши рекомендации на сегодня!"</string>
    <string name="manufacturer">Производитель</string>
    <string name="description">Описание</string>
    <string name="about">Приложение по поддержке пациента во время реабилитации</string>
</resources>
