<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Alexey Barykin 2020.
  ~ All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <group android:id="@+id/patient_fragment_group">
            <item
                android:title="@string/menu_item_profile"
                android:id="@+id/profileFragment"/>

            <item
                android:title="@string/menu_item_recommendations"
                android:id="@+id/recommendationsFragment"/>

            <item
                android:title="@string/menu_item_medicine"
                android:id="@+id/medicinesFragment"/>

            <item
                android:title="@string/menu_item_glossary"
                android:id="@+id/glossaryFragment"/>
        </group>


        <group android:id="@+id/service_group">
            <item
                android:title="@string/about_app"
                android:id="@+id/aboutFragment"/>

            <item
                android:title="@string/exit"
                android:id="@+id/exit"/>
        </group>

</menu>