<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Alexey Barykin 2020.
  ~ All rights reserved.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/recommendationsFragment">

    <fragment
        android:id="@+id/glossaryFragment"
        android:name="ru.alexey.patientassistant.client.patient.ui.glossary.GlossaryFragment"
        android:label="@string/glossary" >
        <action
            android:id="@+id/action_glossaryFragment_to_glossaryDetailsFragment"
            app:destination="@id/glossaryDetailsFragment" >
            <argument
                android:name="title"
                app:argType="string" />
            <argument
                android:name="content"
                app:argType="string" />
        </action>

    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="ru.alexey.patientassistant.client.patient.ui.profile.ProfileFragment"
        android:label="@string/profile" />
    <fragment
        android:id="@+id/medicinesFragment"
        android:name="ru.alexey.patientassistant.client.patient.ui.drugs.DrugsFragment"
        android:label="@string/medicines" />
    <fragment
        android:id="@+id/recommendationsFragment"
        android:name="ru.alexey.patientassistant.client.patient.ui.recommendations.RecommendationsFragment"
        android:label="@string/recommendations" />
    <fragment
        android:id="@+id/glossaryDetailsFragment"
        android:name="ru.alexey.patientassistant.client.patient.ui.glossary.GlossaryDetailsFragment"
        android:label="@string/glossary" >

        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="content"
            app:argType="string" />
        <action
            android:id="@+id/action_glossaryDetailsFragment_to_glossaryFragment"
            app:destination="@id/glossaryFragment"
            app:popUpTo="@id/glossaryFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <activity
        android:id="@+id/loginActivity"
        android:name="ru.alexey.patientassistant.client.login.ui.LoginActivity"
        android:label="LoginActivity" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ru.alexey.patientassistant.client.patient.ui.about.AboutFragment"
        android:label="О приложении"
        tools:layout="@layout/about_fragment" />

</navigation>