<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Alexey Barykin 2020.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="82dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/profile_patient_text"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/Patient" />

            <TextView
                android:id="@+id/profile_name"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorOnLight"
                tools:text="Адам Сэндлер" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/profile_phone_number" />

            <TextView
                android:id="@+id/patient_profile_phone_number"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="+7 (960) 887-25-55" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/profile_your_doctor" />

            <TextView
                android:id="@+id/patient_profile_doctor_name"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="Доктор" />

        </LinearLayout>

        <Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            app:strokeColor="@color/black"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:drawableEnd="@drawable/ic_exit_to_app"
            android:drawablePadding="4dp"
            android:text="@string/exit_from_profile"
            android:layout_gravity="bottom|end"
            android:textColor="@color/textColorOnLight" />
    </RelativeLayout>
</layout>